Save changes on the cloud. Add a filter dialog.

--- a/Statistics Tools/Statistics Tools.vbproj
+++ b/Statistics Tools/Statistics Tools.vbproj
@@ -12,6 +12,10 @@
     <Authors>Jens Kluge</Authors>
   </PropertyGroup>
 
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <DefineConstants>Test=False</DefineConstants>
+  </PropertyGroup>
+
   <ItemGroup>
     <Import Include="System.Data" />
     <Import Include="System.Drawing" />
